samples/_failures_safe/1761625965_6d2def_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4348ea7b.c: In function ‘tokenize’:
./samples/SAFE/__tmp_4348ea7b.c:174:36: error: ‘TO’ undeclared (first use in this function)
  174 |         tokens[token_count].type = TO
      |                                    ^~
./samples/SAFE/__tmp_4348ea7b.c:174:36: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_4348ea7b.c:174:38: error: expected ‘;’ at end of input
  174 |         tokens[token_count].type = TO
      |                                      ^
      |                                      ;
./samples/SAFE/__tmp_4348ea7b.c:174:9: error: expected declaration or statement at end of input
  174 |         tokens[token_count].type = TO
      |         ^~~~~~
./samples/SAFE/__tmp_4348ea7b.c:174:9: error: expected declaration or statement at end of input
